# New-Quantum-Bank

./: .env.example  .gitignore  .pre-commit-config.yaml  .uv.toml  Aptfile  CANARY_DEPLOYMENT.md  CI_CD_WORKFLOW_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  LICENSE_FAQ.md  Procfile  README.md  SECURITY.md  app.json  bot.py  cluster.py  config.py  docker-compose.yml  heroku_buildpack.sh  launcher.py  performance_optimization_report.md  pyproject.toml  pytest.ini  quantum_bank_command_reference.txt  requirements.txt  setup.bat  setup.sh  tatus  temp_mongo_test.py  test.py  uv.bat  uv.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: code-quality.yml  dependabot-auto-merge.yml  deploy.yml  heroku-deploy.yml  integration-tests.yml  performance-tests.yml  production-deploy.yml  python-ci.yml  security-scan.yml  staging-deploy.yml
ci_cd/: canary_monitor.py  deployment_tests.py  traffic_router.py
cogs/: accounts.py  admin.py  admin_performance.py  anime.py  error_handler.py  feature_flags.py  mongo.py  performance_monitor.py  utility.py
config/: devcycle.json
docs/: COMMANDS.md  DEPENDENCIES.md  DEPENDENCY_MANAGEMENT.md  DEVELOPERS.md  FEATURE_FLAGS.md  INSTALLATION.md  PERFORMANCE.md  TYPE_MIGRATION.md
helper/: exceptions.py
helpers/: __init__.py  cache_manager.py  connection_pool.py  constants.py  exceptions.py  feature_flags.py  rate_limiter.py  shard_manager.py
heroku_scripts/: check_optimizations.py  post_deploy.py  release.sh
mongo-init/: init-mongo.js
optimizations/: README.md  __init__.py  db_performance.py  memory_management.py  mongo_examples.py  mongodb_implementation_plan.md  mongodb_improvements.py  test_performance.py
scripts/: add_type_annotations.py  check_environment.py  replace_prints.py  uvtool.py
tests/: conftest.py  test_mongo_integration.py
tests/integration/: __init__.py  test_mongodb_connection.py
tests/unit/: __init__.py  test_accounts.py  test_bot.py  test_credit_score.py  test_launcher.py  test_loans.py  test_transactions.py  test_utility.py
tools/: README.md  check_optimizations.py  run_performance_tests.py
