[project]
name = "quantum-bank-bot"
version = "1.0.0"
description = "A Discord economy bot with advanced banking features, MongoDB integration, and colorful logging"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Quantum Bank Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "py-cord>=2.0.0",
    "motor>=3.0.0",
    "pymongo>=4.0.0",
    "python-dotenv>=0.19.0",
    "python-dateutil>=2.8.2",
    "asyncio>=3.4.3",
    "colorama>=0.4.4",
    "orjson>=3.6.0",
    "dnspython>=2.1.0",
    "aiohttp>=3.8.0",
    "cryptography>=36.0.0",
    "PyNaCl>=1.5.0",
    "typing-extensions>=4.0.0",
    "pytz>=2021.3",
]

[project.optional-dependencies]
high-performance = [
    'uvloop>=0.16.0; platform_system != "Windows"',
]

development = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
    "bandit>=1.7.5",
    "pre-commit>=3.3.0",
    "mypy>=1.0.0",
    "mongomock>=4.1.2",
    "motor-stubs>=1.7.1",
]

testing = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",
    "mongomock>=4.1.2",
]

docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
target-version = "py39"
line-length = 120
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E203", "E722"]
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["E501"]

[tool.ruff.lint.isort]
known-third-party = ["discord", "py_cord", "motor", "pymongo", "pytest"]
known-first-party = ["cogs", "helpers", "utils"]

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["py_cord.*", "motor.*", "pymongo.*"]
ignore_missing_imports = true

# Additional override for mongomock since we're removing types-pymongo dependency
[[tool.mypy.overrides]]
module = ["mongomock.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require external services",
    "unit: marks unit tests",
    "bot: marks tests that require a bot instance",
    "database: marks tests that require a database connection",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B311"]  # Skip warning about random, we're using it for non-security purposes
