[project]
name = "quantum-superbot"
version = "1.0.0"
description = "A powerful multi-purpose Discord bot with advanced features, MongoDB integration, and performance optimization"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Quantum Superbot Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Core dependencies - minimum required to run the bot
    "py-cord>=2.0.0,<3.0.0",
    "python-dotenv>=0.19.0,<2.0.0",
    "asyncio>=3.4.3,<4.0.0",
    "colorama>=0.4.4,<1.0.0",
    "typing-extensions>=4.0.0,<5.0.0",
    "yarl",
    "aiohappyeyeballs",
    "aiosignal", 
    "attrs",
    "frozenlist",
]

[project.optional-dependencies]
# Database components
database = [
    "motor>=3.0.0,<4.0.0",
    "pymongo>=4.0.0,<5.0.0",
    "dnspython>=2.1.0,<3.0.0",
]

# Monitoring and performance optimization components
monitoring = [
    "psutil>=5.9.0,<8.0.0",
    "prometheus-client>=0.16.0,<1.0.0",
    "statsd>=4.0.0,<5.0.0",
    "expiringdict>=1.2.2,<2.0.0",
    "cycler>=0.11.0,<1.0.0",  # Required by performance_monitor cog
]

# Feature flags and experimental features
features = [
    "devcycle-python-server-sdk>=3.11.0,<4.0.0",
]

# Data processing and visualization
datascience = [
    "numpy>=1.20.0,<2.0.0",
    "pandas>=1.3.0,<2.0.0",
    "matplotlib>=3.5.0,<4.0.0",
]

# Performance optimizations
optimizations = [
    "orjson>=3.6.0,<4.0.0",
    "msgpack>=1.0.3,<2.0.0",
    "uvloop>=0.16.0,<0.17.0;platform_system!='Windows'",  # Used in high performance mode on non-Windows
]

# Media processing
media = [
    "Pillow>=10.0.0,<11.0.0",
]

# Security components
security = [
    "cryptography>=44.0.0,<45.0.0",
    "PyNaCl>=1.5.0,<2.0.0",
]

# Testing tools
testing = [
    "mongomock>=4.1.2,<5.0.0",
    "pytest>=7.0.0,<8.0.0",
    "pytest-asyncio>=0.17.0,<0.18.0",
]

# Development tools
dev = [
    "black>=23.0.0,<25.0.0",
    "flake8>=6.0.0,<7.0.0",
    "ruff>=0.0.270,<1.0.0",
    "isort>=5.10.0,<6.0.0",
    "mypy>=1.0.0,<2.0.0",
]

# Full installation with all dependencies
all = [
    "quantum-superbot[database,monitoring,features,datascience,optimizations,media,security,testing,dev]"
]

# Production deployment setup
production = [
    "quantum-superbot[database,monitoring,features,optimizations,media,security]"
]

# High-performance setup for containerized environments
high-performance = [
    "quantum-superbot[database,monitoring,features,optimizations,security]",
    "uvloop>=0.16.0,<0.17.0;platform_system!='Windows'",
    "orjson>=3.6.0,<4.0.0"
]

[project.scripts]
quantum-superbot = "launcher:run_bot"

# UV package manager configuration
[tool.uv]
# Package management settings
pip = {upgrade = true}
# Configure advanced options
cache-dir = ".uv-cache"
